--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,37 +1,34 @@
 {
-	"ecmaFeatures": {
-	  "arrowFunctions": true,
-	  "binaryLiterals": false,
-	  "blockBindings": true,
-	  "classes": true,
-	  "defaultParams": true,
-	  "destructuring": true,
-	  "forOf": true,
-	  "generators": true,
-	  "modules": false,
-	  "objectLiteralComputedProperties": true,
-	  "objectLiteralDuplicateProperties": false,
-	  "objectLiteralShorthandMethods": true,
-	  "objectLiteralShorthandProperties": true,
-	  "octalLiterals": false,
-	  "regexUFlag": false,
-	  "regexYFlag": false,
-	  "restParams": true,
-	  "spread": true,
-	  "superInFunctions": true,
-	  "templateStrings": true,
-	  "unicodePointEscapes": true,
-	  "globalReturn": false,
-	  "jsx": true
-	},
 	"env": {
 	  "browser": true,
 	  "node": true
 	},
-	"parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
 	"plugins": [
-	  "react"
+	  "react",
+	  "@typescript-eslint"
 	],
+  "extends": [
+    "react-app",
+    "react-app/jest",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended",
+    "prettier"],
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
+  },
 	"rules": {
 	  /* Possible Errors */
 	  "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
@@ -273,10 +270,9 @@
 	  "react/prefer-es6-class": 1, //Use ES6 Class instead of Reacy.createClass
 	  "react/prop-types": 1, //Prevent missing props validation in a React component definition
 	  "react/react-in-jsx-scope": 1, //Prevent missing React when using JSX
-	  "react/require-extension": 1, //Restrict file extensions that may be required
+	  "react/require-extension": 0, //Restrict file extensions that may be required
 	  "react/self-closing-comp": 1, //Prevent extra closing tags for components without children
 	  "react/sort-comp": 1, //Enforce component methods order
-	  "react/wrap-multilines": 0 //Prevent missing parentheses around multiline JSX
-  
+	  "react/wrap-multilines": 0 //Prevent missing parentheses around multiline JSX  
 	}
-  }
+}
