--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --config nodemon.json src/main.ts",
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/main.ts",
+    "lint": "eslint --fix --ext .js,.ts src/"
   },
   "author": "osalmine",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "nodemon": "^2.0.15",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "debug": "^4.3.3",
+    "socket.io": "^4.4.1"
+  }
 }
