Fix typescript and lint issues

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -21,7 +21,8 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
+    "tsconfigRootDir": "client"
   },
   "settings": {
     "react": {
