--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -8,6 +8,14 @@
 	  "@typescript-eslint"
 	],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "project": "./tsconfig.json",
+    "tsconfigRootDir": "server"
+  },
 	"rules": {
 	  /* Possible Errors */
 	  "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
