--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
