--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --config nodemon.json src/main.ts",
+    "dev": "DEBUG=tetris:* nodemon --config nodemon.json src/main.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/main.ts",
     "lint": "eslint --fix --ext .js,.ts src/"
   },
