--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"author": "redpelicans",
 	"license": "MIT",
 	"scripts": {
-		"eslint": "eslint client server",
+		"lint": "cd client && npm run lint && cd ../server && npm run lint",
 		"client-dist": "NODE_ENV=production webpack --progress --colors",
 		"client-dev": "webpack-dev-server --colors --hot --inline --host 0.0.0.0 --port 8080",
 		"srv-dev": "DEBUG=tetris:* babel-watch -w src server/main.js",
