Add this as eslint global variable

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -16,6 +16,9 @@
     // "project": "./tsconfig.json",
     // "tsconfigRootDir": "server"
   },
+  "globals": {
+    "this": true
+  },
 	"rules": {
 	  /* Possible Errors */
 	  "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
