--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -6,7 +6,9 @@
   "parser": "@typescript-eslint/parser",
 	"plugins": [
 	  "react",
-	  "@typescript-eslint"
+	  "@typescript-eslint",
+    "prettier",
+    "react-hooks"
 	],
   "extends": [
     "react-app",
@@ -31,8 +33,10 @@
     }
   },
 	"rules": {
+    "prettier/prettier": ["error", { "singleQuote": true }],
+    "react-hooks/rules-of-hooks": "error",
 	  /* Possible Errors */
-	  "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
+	  // "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
 	  "no-cond-assign": [1, "except-parens"], //disallow assignment in conditional expressions (recommended)
 	  "no-console": 0, //disallow use of console in the node environment (recommended)
 	  "no-constant-condition": 1, //disallow use of constant expressions in conditions (recommended)
@@ -151,7 +155,7 @@
 	  /* Stylistic Issues */
 	  "array-bracket-spacing": [1, "never"], //enforce spacing inside array brackets (fixable)
 	  "block-spacing": [1, "always"], //disallow or enforce spaces inside of single line blocks (fixable)
-	  "brace-style": [1, "stroustrup", { "allowSingleLine": true }], //enforce one true brace style
+	  "brace-style": [1, "1tbs", { "allowSingleLine": true }], //enforce one true brace style
 	  "camelcase": [1, { "properties": "always" }], //require camel case names
 	  "comma-spacing": [1, { "before": false, "after": true }], //enforce spacing before and after comma
 	  "comma-style": [1, "last"], //enforce one true comma style
@@ -162,7 +166,7 @@
 	  "func-style": 0, //enforce use of function declarations or expressions
 	  "id-length": 0, //this option enforces minimum and maximum identifier lengths (variable names, property names etc.)
 	  "id-match": [0, "^[a-z]+([A-Z][a-z]*)*$", {"properties": true}], //require identifiers to match the provided regular expression
-	  "indent": [1, 2], //specify tab or space width for your code (fixable)
+	  // "indent": [1, 2], //specify tab or space width for your code (fixable)
 	  "jsx-quotes": [1, "prefer-single"], //specify whether double or single quotes should be used in JSX attributes
 	  "key-spacing": [1, { "beforeColon": false, "afterColon": true }], //enforce spacing between keys and values in object literal properties
 	  "linebreak-style": 0, //disallow mixed 'LF' and 'CRLF' as linebreaks
@@ -216,14 +220,14 @@
 	  "keyword-spacing": 1, //require a space after return, throw, and case (fixable)
 	  "space-unary-ops": 0, //require or disallow spaces before/after unary operators (fixable)
 	  "spaced-comment": [1, "always"], //require or disallow a space immediately following the // or /* in a comment
-	  "wrap-regex": 1, //require regex literals to be wrapped in parentheses
+	  // "wrap-regex": 1, //require regex literals to be wrapped in parentheses
   
 	  /* ECMAScript 6 */
 	  "arrow-body-style": [1, "as-needed"], // require braces in arrow function body
 	  "arrow-parens": [0, "always"], // require parens in arrow function arguments
 	  "arrow-spacing": [1, { "before": true, "after": true }], //require space before/after arrow function's arrow (fixable)
 	  "constructor-super": 1, //verify calls of super() in constructors
-	  "no-confusing-arrow": 1, // disallow arrow functions where a condition is expected
+	  // "no-confusing-arrow": 1, // disallow arrow functions where a condition is expected
 	  "generator-star-spacing": [1, "after"], // enforce spacing around the * in generator functions (fixable)
 	  "no-class-assign": 1, //disallow modifying variables of class declarations
 	  "no-const-assign": 1, //disallow modifying variables that are declared using const
