--- a/client/package.json
+++ b/client/package.json
@@ -63,8 +63,8 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "2.6.2",
     "redux-devtools-extension": "^2.13.9"
   }
 }
