--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "nodemon": "^2.0.15",
+    "prettier": "2.6.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
