--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
-	"editor.tabSize": 2,
-	"editor.insertSpaces": true,
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   },
-  "eslint.validate": ["javascript, typescript"]
+  "eslint.validate": [
+    "javascript, typescript"
+  ]
 }
