--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@types/redux": "^3.6.0",
+    "@types/redux-immutable-state-invariant": "^2.1.2",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
@@ -65,6 +66,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
     "prettier": "2.6.2",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-immutable-state-invariant": "^2.1.0"
   }
 }
