--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -8,7 +8,8 @@
 	  "@typescript-eslint",
     "prettier"
 	],
-  "extends": ["eslint:recommended",
+  "extends": [
+		"eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "eslint:recommended",
     "prettier"
