--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,6 +31,7 @@
   "rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
     "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
     /* Possible Errors */
     // "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
     "no-cond-assign": [1, "except-parens"], //disallow assignment in conditional expressions (recommended)
