--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -27,6 +27,13 @@
   },
 	"rules": {
     "prettier/prettier": ["error", { "singleQuote": true }],
+    // "import/order": [
+    //   "error",
+    //   {
+    //     "newlines-between": "always",
+    //     "groups": [["external", "builtin"], "internal", ["index", "sibling", "parent"]]
+    //   }
+    // ],
 	  /* Possible Errors */
 	  // "comma-dangle": [1, "always-multiline"], //disallow or enforce trailing commas (recommended)
 	  "no-cond-assign": [1, "except-parens"], //disallow assignment in conditional expressions (recommended)
@@ -158,7 +165,7 @@
 	  "func-style": 0, //enforce use of function declarations or expressions
 	  "id-length": 0, //this option enforces minimum and maximum identifier lengths (variable names, property names etc.)
 	  "id-match": [0, "^[a-z]+([A-Z][a-z]*)*$", {"properties": true}], //require identifiers to match the provided regular expression
-	  "indent": [1, 2], //specify tab or space width for your code (fixable)
+	  // "indent": [1, 2], //specify tab or space width for your code (fixable)
 	  "jsx-quotes": [1, "prefer-single"], //specify whether double or single quotes should be used in JSX attributes
 	  "key-spacing": [1, { "beforeColon": false, "afterColon": true }], //enforce spacing between keys and values in object literal properties
 	  "linebreak-style": 0, //disallow mixed 'LF' and 'CRLF' as linebreaks
