--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -200,7 +200,7 @@
 	  "object-curly-spacing": [1, "always"], // require or disallow padding inside curly braces (fixable)
 	  "one-var": [0, "never"], //require or disallow one variable declaration per function
 	  "operator-assignment": [1, "never"], //require assignment operator shorthand where possible or prohibit it entirely
-	  "operator-linebreak": [1, "after"], //enforce operators to be placed before or after line breaks
+	  // "operator-linebreak": [1, "after"], //enforce operators to be placed before or after line breaks
 	  "padded-blocks": [0, "never"], //enforce padding within blocks
 	  "quote-props": [0, "as-needed"], //require quotes around object literal property names
 	  "quotes": [1, "single"], //specify whether backticks, double or single quotes should be used (fixable)
@@ -212,7 +212,7 @@
 	  "sort-vars": 0, //sort variables within the same declaration block
 	  "space-after-keywords": 0, //require a space after certain keywords (fixable)
 	  "space-before-blocks": [1, "always"], //require or disallow a space before blocks (fixable)
-	  "space-before-function-paren": [1, "never"], //require or disallow a space before function opening parenthesis (fixable)
+	  // "space-before-function-paren": [1, "never"], //require or disallow a space before function opening parenthesis (fixable)
 	  "space-before-keywords": [0, "never"], //require a space before certain keywords (fixable)
 	  "space-in-parens": [1, "never"], //require or disallow spaces inside parentheses
 	  "space-infix-ops": 1, //require spaces around operators (fixable)
