--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,9 @@
 	  "target": "es6",
 	  "moduleResolution": "node",
 	  "sourceMap": true,
-	  "outDir": "dist"
+	  "outDir": "dist",
+    "types": ["jest", "jest-extended"],
+    "paths": { "test*": ["./src/test/*"] }
 	},
 	"lib": ["es2015"]
   }
