--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.5.0",
     "jest-extended": "^3.2.4",
+    "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.19",
     "prettier": "2.6.2",
     "ts-jest": "^29.0.5",
