--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "node-mocks-http": "^1.12.2",
     "nodemon": "^2.0.19",
     "prettier": "2.6.2",
+    "socket.io-mock": "^1.3.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
