--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,8 @@
 	  "sourceMap": true,
 	  "outDir": "dist",
     "types": ["jest", "jest-extended"],
-    "paths": { "test*": ["./src/test/*"] }
+    "paths": { "test/*": ["./src/test/*"] }
 	},
-	"lib": ["es2015"]
+	"lib": ["es2015"],
+	"exclude": ["node_modules"]
   }
