--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "test": "react-scripts test",
+    "test": "jest",
     "lint": "eslint --fix --ext .js,.ts src/"
   },
   "eslintConfig": {
@@ -63,8 +63,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "jest-extended": "^3.2.4",
     "prettier": "2.6.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-immutable-state-invariant": "^2.1.0"
+    "redux-immutable-state-invariant": "^2.1.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
