--- a/client/package.json
+++ b/client/package.json
@@ -65,6 +65,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-extended": "^3.2.4",
     "prettier": "2.6.2",
     "redux-devtools-extension": "^2.13.9",
