Update readme and commands

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "author": "osalmine",
   "license": "MIT",
   "scripts": {
+    "postinstall": "cd client && npm install && cd ../server && npm install",
     "lint": "cd client && npm run lint && cd ../server && npm run lint",
-    "client-dist": "NODE_ENV=production webpack --progress --colors",
-    "client-dev": "webpack-dev-server --colors --hot --inline --host 0.0.0.0 --port 8080",
-    "test": "mocha --require babel-core/register --reporter spec",
-    "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha ",
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development --progress",
+    "build": "npm run client:build && npm run server:build",
+    "client:build": "webpack --mode=production --node-env=production",
+    "client:build:dev": "webpack --mode=development --progress",
+    "server:build": "cd server && npm run build",
     "watch": "webpack --watch",
     "serve": "webpack serve",
     "start:dev": "cd server && npm run dev",
