--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -52,7 +52,6 @@
     "no-empty-character-class": 1, //disallow the use of empty character classes in regular expressions (recommended)
     "no-empty": 1, //disallow empty statements (recommended)
     "no-ex-assign": 1, //disallow assigning to the exception in a catch block (recommended)
-    "no-extra-boolean-cast": 1, //disallow double-negation boolean casts in a boolean context (recommended)
     "no-extra-parens": 0, //disallow unnecessary parentheses
     "no-extra-semi": 1, //disallow unnecessary semicolons (recommended) (fixable)
     "no-func-assign": 1, //disallow overwriting functions written as function declarations (recommended)
@@ -202,7 +201,7 @@
     "no-lonely-if": 1, //disallow if as the only statement in an else block
     "no-mixed-spaces-and-tabs": 1, //disallow mixed spaces and tabs for indentation (recommended)
     "no-multiple-empty-lines": [1, { "max": 1 }], //disallow multiple empty lines
-    "no-negated-condition": 1, //disallow negated conditions
+    // "no-negated-condition": 1, //disallow negated conditions
     "no-nested-ternary": 0, //disallow nested ternary expressions
     "no-new-object": 1, //disallow the use of the Object constructor
     "no-restricted-syntax": [
