--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -179,7 +179,7 @@
     "id-length": 0, //this option enforces minimum and maximum identifier lengths (variable names, property names etc.)
     "id-match": [0, "^[a-z]+([A-Z][a-z]*)*$", { "properties": true }], //require identifiers to match the provided regular expression
     // "indent": [1, 2], //specify tab or space width for your code (fixable)
-    "jsx-quotes": [1, "prefer-single"], //specify whether double or single quotes should be used in JSX attributes
+    // "jsx-quotes": [1, "prefer-single"], //specify whether double or single quotes should be used in JSX attributes
     "key-spacing": [1, { "beforeColon": false, "afterColon": true }], //enforce spacing between keys and values in object literal properties
     "linebreak-style": 0, //disallow mixed 'LF' and 'CRLF' as linebreaks
     // "lines-around-comment": [
