--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch": "webpack --watch",
     "serve": "webpack serve",
     "start:dev": "cd server && npm run dev",
-    "start": "cd server && npm start"
+    "start": "cd server && npm start",
+    "test": "NODE_ENV=test jest"
   },
   "nyc": {
     "exclude": [
@@ -38,6 +39,9 @@
     "webpack-dev-server": "^4.15.0"
   },
   "dependencies": {
-    "process": "^0.11.10"
+    "@types/jest": "^29.5.1",
+    "jest": "^29.5.0",
+    "process": "^0.11.10",
+    "ts-node": "^10.9.1"
   }
 }
