--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "devDependencies": {
     "@webpack-cli/generators": "^3.0.3",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
     "prettier": "^2.8.8",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
