--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,10 @@
   "scripts": {
     "start": "react-scripts start",
     "test": "NODE_ENV=test jest",
-    "lint": "eslint --fix --ext .js,.ts src/"
+    "lint": "eslint --fix --ext .js,.ts src/",
+    "watch": "webpack --mode=development --watch",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development --progress"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +60,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@webpack-cli/generators": "^3.0.3",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -64,6 +68,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-extended": "^3.2.4",
@@ -71,6 +76,9 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-immutable-state-invariant": "^2.1.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   }
 }
