--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@webpack-cli/generators": "^3.0.3",
+    "css-loader": "^6.7.3",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -75,7 +76,9 @@
     "prettier": "2.8.8",
     "redux-devtools-extension": "^2.13.9",
     "redux-immutable-state-invariant": "^2.1.0",
+    "style-loader": "^3.3.2",
     "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0",
