--- a/package.json
+++ b/package.json
@@ -15,13 +15,10 @@
     "test": "NODE_ENV=test jest"
   },
   "devDependencies": {
-    "prettier": "^2.8.8",
-    "typescript": "^5.0.4"
+    "@types/jest": "^29.5.1",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
-    "@types/jest": "^29.5.1",
-    "jest": "^29.5.0",
-    "process": "^0.11.10",
-    "ts-node": "^10.9.1"
+    "jest": "^29.5.0"
   }
 }
